--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body class="page">
     <header class="header">
       <div class="logo logo_place_header">
-         <img src="../sprint-1__startkit/images/logo_place_header.svg" alt="логотип сайта">
+         <img src="../sprint-1__startkit/images/logo_place_header.svg"alt="логотип сайта">
       </div>
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
@@ -142,35 +142,26 @@
           <h3 class="footer__column-heading">Соцсети</h3>
           <ul class="footer__column-links">
             <li>
-              <a href="" class="footer__link link">
-                <img src="../sprint-1__startkit/images/youtube_color_white.svg"
-                alt="youtube"
-                class="footer__social-icon">
+              <a href="#" class="footer__link link">
+                <img src="../sprint-1__startkit/images/youtube_color_white.svg" alt="youtube"class="footer__social-icon">
                 YouTube
               </a>
             </li>
             <li>
-              <a href="" class="footer__link link">
-                <img src="../sprint-1__startkit/images/vk_color_white.svg"
-                alt="VK"
-                class="footer__social-icon">
+              <a href="#" class="footer__link link">
+                <img src="../sprint-1__startkit/images/vk_color_white.svg"alt="VK"class="footer__social-icon">
                 ВКонтакте
               </a>
             </li>
             <li>
-              <a href="" class="footer__link link">
-                <img src="..//sprint-1__startkit/images/tiktok_color_white.svg"
-                alt="Tiktok"
-                class="footer__social-icon">
+              <a href="#" class="footer__link link">
+                <img src="..//sprint-1__startkit/images/tiktok_color_white.svg" alt="Tiktok" class="footer__social-icon">
                 TikTok
               </a>
             </li>
           </ul>
         </nav>
-
       </div>
-
     </footer>
-
 </body>
 </html>
