--- a/index.html
+++ b/index.html
@@ -143,19 +143,19 @@
           <ul class="footer__column-links">
             <li>
               <a href="#" class="footer__link link">
-                <img src="../sprint-1__startkit/images/youtube_color_white.svg" alt="youtube"class="footer__social-icon">
+                <img src="../sprint-1__startkit/images/youtube_color_white.svg" alt="ютуб"class="footer__social-icon">
                 YouTube
               </a>
             </li>
             <li>
               <a href="#" class="footer__link link">
-                <img src="../sprint-1__startkit/images/vk_color_white.svg"alt="VK"class="footer__social-icon">
+                <img src="../sprint-1__startkit/images/vk_color_white.svg"alt="вк"class="footer__social-icon">
                 ВКонтакте
               </a>
             </li>
             <li>
               <a href="#" class="footer__link link">
-                <img src="..//sprint-1__startkit/images/tiktok_color_white.svg" alt="Tiktok" class="footer__social-icon">
+                <img src="..//sprint-1__startkit/images/tiktok_color_white.svg" alt="тикток" class="footer__social-icon">
                 TikTok
               </a>
             </li>
