--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
-  <link rel="stylesheet" href="https://code.s3.yandex.net/web-code/normalize.css">
-  <link rel="stylesheet" href="../sprint-1__startkit/styles/style.css">
+  <link rel="stylesheet" href="../how-to-learn-bootcamp/styles/normalize.css">
+  <link rel="stylesheet" href="../how-to-learn-bootcamp/styles/style.css">
 </head>
 <body class="page">
     <header class="header">
@@ -14,7 +14,7 @@
       </div>
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
-          <a href="#">Узнать</a>
+          <a href="#" class="header__link">Узнать</a>
       </p>
       <div class="Header__main__illustration">
       <img class="main__illustration"src="../sprint-1__startkit/images/two_again.png"alt="Картинка">
