моя попытка номер пять

--- a/index.html
+++ b/index.html
@@ -4,27 +4,24 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
-  <link rel="stylesheet" href="../how-to-learn-bootcamp/styles/normalize.css">
-  <link rel="stylesheet" href="../how-to-learn-bootcamp/styles/style.css">
+  <link rel="stylesheet" href="./styles/normalize.css">
+  <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body class="page">
     <header class="header">
       <div class="logo logo_place_header">
-         <img src="../sprint-1__startkit/images/logo_place_header.svg"alt="логотип сайта">
+         <img src="./images/logo_place_header.svg"alt="логотип сайта">
       </div>
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
           <a href="#" class="header__link">Узнать</a>
       </p>
-      <div class="Header__main__illustration">
-      <img class="main__illustration"src="../sprint-1__startkit/images/two_again.png"alt="Картинка">
-      </div>
+      <img class="header__main__illustration" src="./images/two_again.png">
   <div class="header__square-pic"></div>
     </header>
     <main class="content">
       <section class="description">
         <div class="two-columns">
-          <div class="feynman__png"></div>
           <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
         <div class="two-columns__main-text">
           <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал.
@@ -32,7 +29,7 @@
               часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.
             </p>
             <p class="two-columns__paragraph">
-              <span class="two-columns__paragraph-accent">Вывод: </span>учиться тоже нужно уметь, но
+              <span class="two-columns__span-accent">Вывод: </span>учиться тоже нужно уметь, но
               почему-то этому мало где учат. Что с этим делать?
             </p>
             <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать
@@ -53,7 +50,7 @@
           <div class="table__cell">
             <h3 class="table__heading">2.1 миллиарда</h3>
             <p class="table__text">Число нуждающихся в повышении квалификации
-              Всемирный Банк, 2017</p></div>
+              <p class="table__text">семирный Банк, 2017</p></p></div>
           <div class="table__cell">
             <h3 class="table__heading">1000 терабайт</h3>
             <p class="table__text">Объём памяти человека</p></div>
@@ -61,7 +58,7 @@
             <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p></div>
           <div class="table__cell"><h3 class="table__heading">420 миллионов</h3>
             <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства
-              Всемирный Банк, 2017
+              <p class="table__text">семирный Банк, 2017</p>
               </p></div>
           <div class="table__cell"><h3 class="table__heading">17–20 лет</h3>
             <p class="table__text">Пик обучаемости</p></div>
@@ -143,19 +140,19 @@
           <ul class="footer__column-links">
             <li>
               <a href="#" class="footer__link link">
-                <img src="../sprint-1__startkit/images/youtube_color_white.svg" alt="ютуб"class="footer__social-icon">
+                <img src="./images/youtube_color_white.svg" alt="ютуб"class="footer__social-icon">
                 YouTube
               </a>
             </li>
             <li>
               <a href="#" class="footer__link link">
-                <img src="../sprint-1__startkit/images/vk_color_white.svg"alt="вк"class="footer__social-icon">
+                <img src="./images/vk_color_white.svg"alt="вк"class="footer__social-icon">
                 ВКонтакте
               </a>
             </li>
             <li>
               <a href="#" class="footer__link link">
-                <img src="..//sprint-1__startkit/images/tiktok_color_white.svg" alt="тикток" class="footer__social-icon">
+                <img src="./images/tiktok_color_white.svg" alt="тикток" class="footer__social-icon">
                 TikTok
               </a>
             </li>
