--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="ru">
     <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Научиться учиться</title>
-        <link rel="stylesheet" href="./pages/index.css" />
+        <link rel="stylesheet" href="./pages/index.css">
     </head>
     <body class="page">
         <header class="header">
-            <img src="./images/logo_place_header.svg" alt="логотип сайта" class="logo logo_place_header" />
+            <img src="./images/logo_place_header.svg" alt="логотип сайта" class="logo logo_place_header">
             <h1 class="header__title">Научиться учиться</h1>
             <p class="header__subtitle">
                 Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
                 <a href="#" class="header__link">Узнать &#8594;</a>
             </p>
-            <img class="header__main-illustration" src="./images/two_again.png" alt="Опять двойка" />
+            <img class="header__main-illustration" src="./images/two_again.png" alt="Опять двойка">
             <div class="header__square-pic rotation"></div>
         </header>
         <main class="content">
@@ -36,27 +36,27 @@
                 <p class="section-subtitle">Пять практик от Барбары Оакли</p>
                 <ul class="cards">
                     <li class="cards__item">
-                        <img src="./images/cards-attention.png" alt="два вида внимания" class="cards__image" />
+                        <img src="./images/cards-attention.png" alt="два вида внимания" class="cards__image">
                         <h3 class="cards-title">Два вида внимания</h3>
                         <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
                     </li>
                     <li class="cards__item">
-                        <img src="./images/cards-recall.png" alt="сайт" class="cards__image" />
+                        <img src="./images/cards-recall.png" alt="сайт" class="cards__image">
                         <h3 class="cards-title">Recall</h3>
                         <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
                     </li>
                     <li class="cards__item">
-                        <img src="./images/cards-interliving.png" alt="Интерливинг" class="cards__image" />
+                        <img src="./images/cards-interliving.png" alt="Интерливинг" class="cards__image">
                         <h3 class="cards-title">Интерливинг</h3>
                         <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
                     </li>
                     <li class="cards__item">
-                        <img src="./images/cards-question.png" alt="Вопросы" class="cards__image" />
+                        <img src="./images/cards-question.png" alt="Вопросы" class="cards__image">
                         <h3 class="cards-title">Вопросы</h3>
                         <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
                     </li>
                     <li class="cards__item">
-                        <img src="./images/cards-competence.png" alt="Иллюзия компетентности" class="cards__image" />
+                        <img src="./images/cards-competence.png" alt="Иллюзия компетентности" class="cards__image">
                         <h3 class="cards-title">Иллюзия компетентности</h3>
                         <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
                     </li>
@@ -142,7 +142,7 @@
                     <p class="khan__quote-author">Джордж Лукас</p>
                     <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
                     <div class="khan__book-container">
-                        <img src="./images/khan-book.jpg" alt="книга" class="khan__book-pic" />
+                        <img src="./images/khan-book.jpg" alt="книга" class="khan__book-pic">
                         <a class="khan__buy-link" href="#">Купить книгу &#8594;</a>
                     </div>
                 </div>
@@ -202,10 +202,10 @@
                 <h2 class="section-title">Полезные ресурсы</h2>
                 <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
                 <div class="resources__logo-zone">
-                    <a href="#" class="resources__link"><img src="./images/logo/resources-arzamas.svg" alt="армаз сайт" class="resources__logo" /></a>
-                    <a href="#" class="resources__link"><img src="./images/logo/resources-n1.svg" alt=" Н+ сайт" class="resources__logo" /></a>
-                    <a href="#" class="resources__link"><img src="./images/logo/resources-polka.svg" alt="полка сайт" class="resources__logo" /></a>
-                    <a href="#" class="resources__link"><img src="./images/logo/resources-strelka.svg" alt="стрелка сайт" class="resources__logo" /></a>
+                    <a href="#" class="resources__link"><img src="./images/logo/resources-arzamas.svg" alt="армаз сайт" class="resources__logo"></a>
+                    <a href="#" class="resources__link"><img src="./images/logo/resources-n1.svg" alt=" Н+ сайт" class="resources__logo"></a>
+                    <a href="#" class="resources__link"><img src="./images/logo/resources-polka.svg" alt="полка сайт" class="resources__logo"></a>
+                    <a href="#" class="resources__link"><img src="./images/logo/resources-strelka.svg" alt="стрелка сайт" class="resources__logo"></a>
                 </div>
             </section>
         </main>
@@ -213,9 +213,9 @@
             <div class="footer__columns">
                 <div class="footer__column footer__column_content_copyright">
                     <div class="logo logo_place_footer">
-                        <img src="./images/logo_place_footer.svg" alt="лого" />
+                        <img src="./images/logo_place_footer.svg" alt="лого">
                     </div>
-                    <p class="footer__author">&copy2023. Миро Дейсс</p>
+                    <p class="footer__author">&copy;2023. Миро Дейсс</p>
                 </div>
                 <nav class="footer__column footer__column_content_info">
                     <h3 class="footer__column-heading">О Практикуме</h3>
@@ -236,19 +236,19 @@
                     <ul class="footer__column-links">
                         <li class="footer__list-item">
                             <a href="#" class="footer__column-link">
-                                <img src="./images/youtube_color_white.svg" alt="ютуб" class="footer__social-icon" />
+                                <img src="./images/youtube_color_white.svg" alt="ютуб" class="footer__social-icon">
                                 YouTube
                             </a>
                         </li>
                         <li class="footer__list-item">
                             <a href="#" class="footer__column-link">
-                                <img src="./images/vk_color_white.svg" alt="вк" class="footer__social-icon" />
+                                <img src="./images/vk_color_white.svg" alt="вк" class="footer__social-icon">
                                 ВКонтакте
                             </a>
                         </li>
                         <li class="footer__list-item">
                             <a href="#" class="footer__column-link">
-                                <img src="./images/tiktok_color_white.svg" alt="тикток" class="footer__social-icon" />
+                                <img src="./images/tiktok_color_white.svg" alt="тикток" class="footer__social-icon">
                                 TikTok
                             </a>
                         </li>
